--- a/AyxMVVM/AyxMVVM.csproj
+++ b/AyxMVVM/AyxMVVM.csproj
@@ -30,27 +30,38 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Interactivity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="System.Windows.Presentation" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Command\AyxCommand.cs" />
     <Compile Include="Command\AyxCommandGeneric.cs" />
     <Compile Include="Command\AyxEventCommand.cs" />
+    <Compile Include="Message\CommonMsg.cs" />
+    <Compile Include="Message\ConfirmBoxMsg.cs" />
+    <Compile Include="Message\DialogMsg.cs" />
     <Compile Include="Message\IMessageManager.cs" />
     <Compile Include="Message\IMessageRegister.cs" />
+    <Compile Include="Message\MessageManager.cs" />
     <Compile Include="Message\MsgActionInfo.cs" />
     <Compile Include="Message\MsgActionInfoGeneric.cs" />
-    <Compile Include="Message\MsgArgs.cs" />
+    <Compile Include="Message\MessageBase.cs" />
     <Compile Include="NotifyObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Threading\DispatcherHelper.cs" />
     <Compile Include="ViewModelBase.cs" />
+    <Compile Include="ViewModelManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ViewModel\" />
