--- a/AyxMVVM/AyxMVVM.csproj
+++ b/AyxMVVM/AyxMVVM.csproj
@@ -57,14 +57,16 @@
     <Compile Include="Message\MsgActionInfo.cs" />
     <Compile Include="Message\MsgActionInfoGeneric.cs" />
     <Compile Include="Message\MessageBase.cs" />
-    <Compile Include="NotifyObject.cs" />
+    <Compile Include="ObserveObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Threading\DispatcherHelper.cs" />
     <Compile Include="ViewModelBase.cs" />
     <Compile Include="ViewModel\ViewModelInfo.cs" />
     <Compile Include="ViewModelManager.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Dlls\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
