AyxMVVM UWP support complete Write a sample to show how to use AyxMVVM

--- a/AyxMVVM/AyxMVVM.csproj
+++ b/AyxMVVM/AyxMVVM.csproj
@@ -64,9 +64,7 @@
     <Compile Include="ViewModel\ViewModelInfo.cs" />
     <Compile Include="ViewModelManager.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Dlls\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
