--- a/MVVMAppTest/MVVMAppTest.csproj
+++ b/MVVMAppTest/MVVMAppTest.csproj
@@ -99,6 +99,7 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Model\TestData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\MainPageViewModel.cs" />
   </ItemGroup>
