--- a/AyxMVVM(UWP)/AyxMVVM(UWP).csproj
+++ b/AyxMVVM(UWP)/AyxMVVM(UWP).csproj
@@ -109,9 +109,19 @@
   <ItemGroup>
     <Compile Include="Command\AyxCommand.cs" />
     <Compile Include="Command\AyxCommandGeneric.cs" />
+    <Compile Include="Helper\ReflectionHelper.cs" />
+    <Compile Include="Message\IMessageManager.cs" />
+    <Compile Include="Message\IMessageRegister.cs" />
+    <Compile Include="Message\MessageBase.cs" />
+    <Compile Include="Message\MessageManager.cs" />
+    <Compile Include="Message\MsgActionInfo.cs" />
+    <Compile Include="Message\MsgActionInfoGeneric.cs" />
     <Compile Include="ObserveObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Threading\DispatcherHelper.cs" />
     <Compile Include="ViewModelBase.cs" />
+    <Compile Include="ViewModelManager.cs" />
+    <Compile Include="ViewModel\ViewModelInfo.cs" />
     <Content Include="Properties\AyxMVVM_UWP_.rd.xml" />
   </ItemGroup>
   <ItemGroup>
@@ -122,11 +132,7 @@
       <HintPath>..\Dlls\Microsoft.Xaml.Interactivity.dll</HintPath>
     </Reference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Message\" />
-    <Folder Include="Threading\" />
-    <Folder Include="ViewModel\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
